# slang-rs

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: ci.yml
scripts/: download-slang.sh
slang-derive/: Cargo.toml
slang-derive/src/: lib.rs
slang-derive/tests/: compile_tests.rs
slang-derive/tests/ui/fail/: enum_invalid_variant.rs  enum_invalid_variant.stderr  tuple_struct_not_supported.rs  tuple_struct_not_supported.stderr
slang-derive/tests/ui/pass/: enum_attribute.rs  simple_struct.rs
slang-sys/: Cargo.toml  build.rs
slang-sys/src/: lib.rs
src/: lib.rs  tests.rs
src/com_impls/: blob.rs  mod.rs
src/reflection/: decl.rs  entry_point.rs  error.rs  function.rs  generic.rs  helpers.rs  mod.rs  shader.rs  ty.rs  type_layout.rs  type_parameter.rs  user_attribute.rs  variable.rs  variable_layout.rs
tests/: derive_test.rs
