[package]
name = "shader-slang-sys"
version = "0.1.0"
edition = "2024"
description = "FFI bindings for the Slang shader language compiler"
publish = false
repository = "https://github.com/brussig-tud/slang-rs.git"
license = "MIT OR Apache-2.0"
categories = ["compilers", "external-ffi-bindings"]

[dependencies]
serde = {version="*", features=["derive"], optional=true}

[build-dependencies]
bindgen = "*"
reqwest = {version="*", features=["blocking"], optional=true}
fs-set-times = "*"
zip = {version="*", optional=true}
bytes = "*"

[features]
default = []
serde = ["dep:serde"]
copy_libs = []
download_slang_binaries = ["dep:reqwest","dep:zip"]
build_slang_from_source = []
force_on_windows = []
